@@ -43,6 +43,7 @@ New features:
 - 3469777: Scored snippets
 
 Bug fixes:
+- 3516114: NPE with Web Crawler when no unique field is set
 - 3509333: Error 500 when loading robots.txt
 - 3500288: Wrong facet count when using optimized collapsing
 - 3498607: NPE when collapsing is enable with no documents found
